deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jfrog
  namespace: jfrog-dev
  labels:
    app: jfrog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jfrog
  template:
    metadata:
      labels:
        app: jfrog
    spec:
      containers:
      - name: jfrog
        image: releases-docker.jfrog.io/jfrog/artifactory-pro:latest
        ports:
          - containerPort: 8081
          - containerPort: 8082
        volumeMounts:
          - mountPath: /var/opt/jfrog/artifactory
            name: jfrog
      volumes:
      - name: jfrog
        persistentVolumeClaim:
          claimName: jfrog
