ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: jfrog-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: artifactory.ukg.dev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jfrog
            port:
              number: 8082
  tls:
  - hosts:
    - artifactory.ukg.dev.com
    secretName: api-cert
